--- a/package.json
+++ b/package.json
@@ -9,20 +9,17 @@
     "localbuild": "vite build",
     "build-analyze": "NODE_ENV=prod vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check"
   },
   "devDependencies": {
-    "@tsconfig/svelte": "^4.0.1",
-    "@sveltejs/vite-plugin-svelte": "^2.0.4",
+    "@sveltejs/vite-plugin-svelte": "^2.4.1",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.79.2",
-    "svelte": "^3.58.0",
-    "svelte-check": "^3.3.1",
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.4.3",
     "terser": "^5.17.7",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-html": "^3.2.0"
   },
