--- a/package.json
+++ b/package.json
@@ -9,19 +9,31 @@
     "localbuild": "vite build",
     "build-analyze": "NODE_ENV=prod vite build",
     "preview": "vite preview",
-    "check": "svelte-check"
+    "check": "svelte-check",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^8.3.0",
+    "@storybook/addon-actions": "^8.3.0",
+    "@storybook/addon-docs": "^8.3.0",
+    "@storybook/svelte": "^8.3.0",
+    "@storybook/svelte-vite": "^8.3.0",
     "@sveltejs/vite-plugin-svelte": "^2.4.1",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "playwright": "^1.55.0",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.79.2",
+    "storybook": "^8.3.0",
     "svelte": "^4.0.0",
     "svelte-check": "^3.4.3",
     "terser": "^5.17.7",
     "vite": "^4.3.9",
-    "vite-plugin-html": "^3.2.0"
+    "vite-plugin-html": "^3.2.0",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "charming": "^3.0.2",
