--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@storybook/addon-a11y": "^8.3.0",
     "@storybook/addon-actions": "^8.3.0",
+    "@storybook/addon-controls": "^9.0.8",
     "@storybook/addon-docs": "^8.3.0",
     "@storybook/svelte": "^8.3.0",
     "@storybook/svelte-vite": "^8.3.0",
